...
    <string name="identity_demo_unknown_identity_text">&lt;UNKNOWN IDENTITY&gt;</string>
    <string name="identity_demo_dialog_dismiss_text">DISMISS</string>
    <string name="identity_demo_error_dialog_title">Failed Identity Retrieval</string>
    <string name="identity_demo_error_message_failed_get_identity">Could not retrieve the user identity:\u0020</string>
    <string name="main_fragment_title_content_delivery">Content Delivery</string>
    <string name="main_fragment_subtitle_content_delivery">Store app assets like resource files in the cloud. Download and cache files in your app.</string>
    <string name="content_dialog_ok">OK</string>
    <string name="content_cache_summary_text">Cache Summary</string>
    <string name="content_cache_limit_text">Limit</string>
    <string name="content_cache_use_text">In Use</string>
    <string name="content_cache_available_text">Available</string>
    <string name="content_cache_pinned_text">Pinned</string>
    <string name="content_refresh_text">Refresh</string>
...
    <string name="profile_train_photo_upload">In order to be recognised in uploaded events, you must upload a photograph.</string>
    <string name="profile_train_photo_upload_button">Upload photo</string>
    <string name="profile_train_photo_take_button">Take photo</string>
    <string name="eventsFeedTitle">Events Feed</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="signup_signin_email">Login/Signup with Email</string>
    <string name="login_button">Login</string>
    <string name="facebook_app_id">1893738010901605</string>
    <string name="signin_title">Hey, sign in to get started!</string>
    <string name="signup_title">Enter your details below</string>
    <string name="confirm_account_title">Confirm your account</string>

    <string name="signup_photo_error_permissions">Unable to create image file. Check you have set the required permissions.</string>
...
