<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="@style/TextAppearance.FontPath">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1">

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_height="70dp">

            <com.roughike.bottombar.BottomBar
                android:id="@+id/bottomBar"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                app:bb_tabXmlResource="@xml/bottombar_tabs"
                android:layout_height="match_parent"
                app:bb_inActiveTabColor="@color/colorWhite"
                app:bb_activeTabColor="@color/colorWhite"
                android:background="@color/colorDarkGrey"
                app:bb_titleTextAppearance="@style/TextAppearance.FontPath"
                 />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
